# smarthome

./: .gitignore
device-development/: CMakeLists.txt
device-development/example/: CMakeLists.txt
device-development/example/fingerprint/: fingerprint-device-test.cpp  fingerprint-protocol-test.cpp
device-development/example/linux-uart/: linux-uart-test.cpp
device-development/src/: CMakeLists.txt
device-development/src/fingerprint/: fingerprint-device.cpp  fingerprint-device.h  fingerprint-protocol.cpp  fingerprint-protocol.h
device-development/src/linux-uart/: linux-uart.cpp  linux-uart.h
